--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -32,13 +32,13 @@
       <h1>Welcome</h1>
       <ul class="gallery">
         <li>
-          <a href="runningsinglepost.html"><img src="../assets/images/running-image1.png" alt="IMG1"></a>
+          <a href="runningsinglepost.html"><img src="./assets/images/running-image1.png" alt="IMG1"></a>
         </li>
         <li>
-          <a href="runningsinglepost.html"><img src="../assets/images/running-image2.png" alt=""></a>
+          <a href="runningsinglepost.html"><img src="../assets/images/running-image2.png" alt="img2"></a>
         </li>
         <li>
-          <a href="runningsinglepost.html"><img src="../assets/images/running-image3.png" alt=""></a>
+          <a href="runningsinglepost.html"><img src="../assets/images/running-image3.png" alt="img2"></a>
         </li>
       </ul>
       <router-outlet></router-outlet>
