--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,3 +1,10 @@
-<p>
-  contact works!
-</p>
+<div class="contact">
+  <h1>Contact us</h1>
+  <img src="../assets/images/blog-image4.png" alt="">
+  <h2>ADDRESS</h2>
+  <h4>This is just a placeholder so that you would know what the site would look like.</h4>
+  <h2>NUMBERS</h2>
+  <h4>405-361-4578</h4>
+  <h2>Email</h2>
+  <h4>rubinrajbhandari@gmail.com</h4>
+</div>
